[gd_scene load_steps=12 format=3 uid="uid://d2hvwqofb45jq"]

[ext_resource type="Texture2D" uid="uid://c8871s58p01yl" path="res://Sprites/Infante.png" id="1_5y34m"]
[ext_resource type="Script" path="res://Scripts/Infante.gd" id="1_nuxgy"]
[ext_resource type="AudioStream" uid="uid://bl3eumk8or1ep" path="res://Sounds/Infante.wav" id="3_m6vi7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bmeu2"]
radius = 9.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0aq0p"]
radius = 9.0

[sub_resource type="Animation" id="Animation_uqytb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Imagenes/Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0bfw3"]
resource_name = "down0"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Imagenes/Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_6wojl"]
resource_name = "down1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Imagenes/Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}

[sub_resource type="Animation" id="Animation_ne3fx"]
resource_name = "up0"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Imagenes/Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 2, 2, 4, 0]
}

[sub_resource type="Animation" id="Animation_v2i6i"]
resource_name = "up1"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Imagenes/Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 5, 3, 3, 5, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hbrmn"]
_data = {
"RESET": SubResource("Animation_uqytb"),
"down0": SubResource("Animation_0bfw3"),
"down1": SubResource("Animation_6wojl"),
"up0": SubResource("Animation_ne3fx"),
"up1": SubResource("Animation_v2i6i")
}

[node name="Infante" type="CharacterBody2D" groups=["Infante"]]
collision_layer = 4
script = ExtResource("1_nuxgy")

[node name="Coli" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_bmeu2")
metadata/_edit_lock_ = true

[node name="Imagenes" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Img" type="Sprite2D" parent="Imagenes"]
position = Vector2(7, -31)
texture = ExtResource("1_5y34m")
hframes = 6
metadata/_edit_lock_ = true

[node name="RayFrente" type="RayCast2D" parent="Imagenes"]
position = Vector2(0, -15)
exclude_parent = false
target_position = Vector2(30, 0)
metadata/_edit_lock_ = true

[node name="RayCaida" type="RayCast2D" parent="Imagenes"]
position = Vector2(25, -14)
exclude_parent = false
target_position = Vector2(1, 89)
metadata/_edit_lock_ = true

[node name="Ataque" type="Area2D" parent="Imagenes"]
collision_layer = 0
collision_mask = 2
monitorable = false
metadata/_edit_lock_ = true

[node name="Coli" type="CollisionShape2D" parent="Imagenes/Ataque"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_0aq0p")
metadata/_edit_lock_ = true

[node name="Anima" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hbrmn")
}
speed_scale = 4.0

[node name="Iniciador" type="Timer" parent="."]

[node name="Audio" type="AudioStreamPlayer2D" parent="." groups=["Audio"]]
stream = ExtResource("3_m6vi7")
volume_db = 1.0
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Imagenes/Ataque" to="." method="_on_ataque_body_entered"]
[connection signal="animation_finished" from="Anima" to="." method="_on_anima_animation_finished"]
[connection signal="timeout" from="Iniciador" to="." method="_on_iniciador_timeout"]
